# old-blog.takurinton.dev

./: .eslintrc.js  .gitignore  esbuild.client.js  esbuild.server.js  package.json  tsconfig.json  vercel.json
.github/workflows/: deploy.yml  lighthouse.sh  lighthouse.yml
client/: App.tsx  Html.tsx  Layout.tsx  esbuild.js  main.tsx
client/components/Button/Category/: Category.ts  CategoryWrapper.tsx  index.tsx
client/components/Header/: index.tsx  styled.ts
client/components/Typography/: Typography.ts  TypographyWrapper.tsx  index.ts
client/components/utils/: styled.ts
client/components/wc/: Wrapper.tsx
client/pages/: About.tsx  Home.tsx  Post.tsx
client/pages/Home/: Home.tsx  styled.css.ts  styled.ts
client/pages/Post/: Post.tsx  index.tsx  styled.css.ts  styled.ts  syntaxHighlight.ts
client/utils/: getHashByData.ts
client/utils/recoil/: atom.ts
functions/: Cargo.toml  docker-compose.yml  package.json
functions/deploy/: cdk.json  package-lock.json  package.json
functions/deploy/lib/: deploy-stack.ts
functions/deploy/test/: deploy.test.ts
functions/src/: lib.rs
server/: Html.tsx  esbuild.js  index.ts  render.tsx  webpack.config.js
shared/@takurinton/ingred-ui/: package.json
shared/@takurinton/urql/: package.json  tsconfig.json
shared/constants/: constants.ts
shared/graphql/: context.ts  getDataString.ts  initUrqlClient.ts
shared/graphql/hooks/: cache.ts  context.ts  index.ts  state.ts  tsconfig.json  useQuery.ts  useRequest.ts
shared/graphql/query/: post.ts  posts.ts
shared/utils/: datetimeFormatter.ts
(+18 files in other folders)
